k8s/basic-auth-filter-config.yml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: basic-auth-config
  namespace: istio-system
spec:
  configPatches:
    - applyTo: EXTENSION_CONFIG
      match:
        context: GATEWAY
      patch:
        operation: ADD
        value:
          name: istio.basic_auth
          typed_config:
            "@type": type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            value:
              config:
                vm_config:
                  vm_id: basic-auth
                  runtime: envoy.wasm.runtime.v8
                  code:
                    remote:
                      http_uri:
                        uri: https://github.com/istio-ecosystem/wasm-extensions/releases/download/1.11.0/basic-auth.wasm
                      # Optional: specifying sha256 checksum will let istio agent verify the checksum of downloaded artifacts.
                      # It is **highly** recommended to provide the checksum, since missing checksum will cause the Wasm module to be downloaded repeatedly.
                      # To compute the sha256 checksum of a Wasm module, download the module and run `sha256sum` command with it.
                      # sha256: <WASM-MODULE-SHA>
                # The configuration for the Wasm extension itself
                configuration:
                  '@type': type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "basic_auth_rules": [
                        {
                          "prefix": "/productpage",
                          "request_methods":[ "GET", "POST" ],
                          "credentials":[ "ok:test", "YWRtaW4zOmFkbWluMw==" ]
                        }
                      ]
                    }
