k8s/oidc-filter-config.yml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: oidc-filter-config
  namespace: istio-system
spec:
  configPatches:
    - applyTo: EXTENSION_CONFIG
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: ADD
        value:
          name: istio.oidc
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            value:
              config:
                vm_config:
                  code:
#                    local:
#                      filename: target/wasm32-wasi/release/envoy_oidc_filter.wasm
                    remote:
                      http_uri:
                        uri: https://gitlab.com/moneyfarm-tech/sandbox/envoy-oidc-filter/releases/envoy_oidc_filter.wasm
                      # Optional: specifying checksum will let istio agent
                      # verify the checksum of download artifacts. Missing
                      # checksum will cause the Wasm module to be downloaded
                      # repeatedly
                      # sha256: d53a7f59658b0e154338fc50a4a1545e763ca01b5cc5e013f09c99865ee57aad
                  runtime: envoy.wasm.runtime.v8
